Plugin improvements